include spreadsheet in auto-reports

--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/SearchProfiles.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/SearchProfiles.cshtml
@@ -12,8 +12,8 @@
         <th>Id</th>
         <th>SearchProfile</th>
         <th>Login</th>
-        <th>Reports-></th>
-        <th>Email</th>
+        <th>Spreadsheet</th>
+        <th>Email Reports</th>
         <th>DA Contacts</th>
     </tr>
 @foreach (var profile in Model)
