--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Summary.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Summary.cshtml
@@ -142,7 +142,7 @@
                 read: {
                     type: 'post',
                     dataType: 'json',
-                    url: '@Url.Action("SummaryData", "Reports")',
+                    url: '@Url.Action("SummaryData", "Stats")',
                     data: function () {
                         return {
                             startdate: $('#summary_startdate').val(),
