TD Weekly export

--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Weekly.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Weekly.cshtml
@@ -29,7 +29,7 @@
         weeklyDS.read();
     });
 
-    function ExportWeekSumCSV() {
-        window.location.href = '@Url.Action("WeeklyExport", "Reports")';
+    function ExportWeeklyCSV() {
+        window.location.href = '@Url.Action("WeeklyExport", "Stats")';
     }
 </script>
